1998-07-09  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* gdkGL/Makefile.am (libgdkGL_a_SOURCES): Drop gdkGL_gdkutils.c.
	(noinst_HEADERS): Drop gdkGL_gdkutils.h.

	* module.cc (draw_clock): Raise the GL_SPECULAR values.
	(init): Add another light.
	(draw_clock): Raise the GL_SHININESS value.

	* glclock.h (class glclock): Update the definition.
	* glclock.cc (handle_configure_event): New function.
	(glclock): Connect "configure_event" to the handler.
	(handle_expose_event): Do not call glViewport.
	Remove #include <GL/gl.h>.

	* module.h (class module): Update the definition.
	* module.cc (viewport): New function.

1998-07-07  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.h (class glclock): Update the definition.
	* glclock.cc (update): Do return a non-zero value.

1998-07-02  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Version 0.17 released.

	* configure.in: Add checks for OpenGL libraries.

	* TODO: New file.

1998-07-01  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* module.cc (draw_clock): Throw bad_alloc on failure of
	gluNewQuadric.

	* Makefile.am (rglclock_LDFLAGS): Add -export-dynamic.

	* configure.in: Use AM_PROG_LIBTOOL instead of AC_PROG_RANLIB.

	* module.cc (init): Cull back faces.
	(draw_clock): Make vectors const.
	(init): Likewise.

	* NEWS: Update.

	* glclock.cc (create_context): Use module::init.

	* module.h (class module): Update def.
	* module.cc (init): New function.

	* ChangeLog: Fix doc.
	* NEWS: Fix doc.

1998-06-30  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* module.cc (draw_clock): Use GL_AMBIENT_AND_DIFFUSE.
	(draw_clock): Raise the shininess to 8.

	* Version 0.10 released.

	* module.cc (draw_clock): Clear also the depth buffer.
	(draw_clock): Draw a round dial behind the hands.
	(draw_clock): Set the material parameters.

	* glclock.cc (create_context): Enable GL_DEPTH_TEST.
	(create_context): Move the eye position back.

	* NEWS: Update doc.

	* glclock.cc (update): Use module::rotate.
