@@ -1,6 +1,12 @@
 NEWS of rglclock:
-$ProjectVersion: 0.17 $
+$ProjectVersion: 0.20 $
 
+Changes since version 0.17:
+
+* A signal handling bug has been fixed.
+
+* Some lighting parameters have been changed.
+
 Changes since version 0.10:
 
 * The configure script will check for OpenGL libraries.
